# animeweb

./: .env.example  .gitignor  .gitignore  README.md  api.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 3c31ee0e6776_initial_migration.py
animeweb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: main.py
api/v1/: api.py
auth/: security.py  service.py
