[project]
name = "animeweb"
version = "0.1.0"
description = "FastAPI backend for anime."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "psycopg[binary]",
  "alembic",
  "pydantic-settings",
  "pwdlib[argon2]",
  "python-jose[cryptography]",
  "email-validator",
  "httpx",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["api", "frontend", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["api"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
